# ai-learning-assistant-rtc-backend

./: .env  .gitignore  Dockerfile  README.md  build-image-cpu.bat  build-image-cuda.bat  build-image.bat  cli.py  cpu.Dockerfile  cuda.Dockerfile  distribute.fish  distribute.sh  download_uv.sh  env.py  main.py  model_cache.py  pyproject.dist.toml  pyproject.toml  requirements-cpu.txt  requirements-cuda.txt  requirements-rocm.txt  requirements.txt  rtc.py  start.sh
.github/workflows/: release.yml
asr/stt/: stt_adapter.py
asr/vad/: vad_adapter.py
funasr_stt/: stt_adapter.py
funasr_utils/: resample.py
funasr_vad/: vad_adapter.py
kokoro_tts/: tts_adapter.py
rtc/: fastrtc_register.py
rtc/api/: api_handler.py
silero_vad/: vad_adapter.py
src/: .env  api.py  cli.py  env.py
src/asr/: rtc_adapter.py
src/asr/api/: api_handler.py  utils.py
src/asr/models/: model_interface.py  model_manager.py
src/asr/models/SenseVoiceSmall/: handler.py  model_config.toml
src/rtc/: fastrtc_register.py
src/rtc/api/: api_handler.py
src/tts/: rtc_adapter.py
src/tts/api/: api_handler.py  utils.py
src/tts/models/: model_interface.py  model_manager.py  voice_util.py
src/tts/models/index-tts/: handler.py
src/tts/models/kokoro/: handler.py
tts/: rtc_adapter.py
tts/api/: api_handler.py
tts/models/: model_interface.py  model_manager.py
tts/models/index-tts/: handler.py
tts/models/kokoro/: handler.py
