[project]
name = "realtime-conversation-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "en-core-web-sm>=3.8.0",
    "fastrtc[vad]>=0.0.33",
    "misaki[zh]>=0.9.4",
    "openai>=2.6.0",
    "pip>=25.2",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
]

[project.optional-dependencies]
cpu = [
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "funasr>=1.2.7",
    "kokoro>=0.9.4",
]
cu128 = [
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "funasr>=1.2.7",
    "kokoro>=0.9.4",
]
rocm64 = [
    "torch>=2.9.0",
    "torchaudio>=2.9.0",
    "pytorch-triton-rocm; sys_platform == 'linux'",
    "funasr>=1.2.7",
    "kokoro>=0.9.4",
]

[tool.uv]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "rocm64" },
  ],
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm64", extra = "rocm64", marker = "sys_platform == 'linux'" },
]
torchaudio = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cu128", extra = "cu128" },
    { index = "pytorch-rocm64", extra = "rocm64", marker = "sys_platform == 'linux'" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm64", extra = "rocm64", marker = "sys_platform == 'linux'"}
]
en-core-web-sm = [
    { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.8.0/en_core_web_sm-3.8.0-py3-none-any.whl" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm64"
url = "https://download.pytorch.org/whl/rocm6.4"
explicit = true
